test/scc/decl/semantic-errors/029.t
struct A
{
    int a : -1;
};